
    Drivers:
    * Replace PolypAudio by PulseAudio (-ao pulse)

    MEncoder:
    * Ogg muxing using -of lavf -o done.ogg

    Others:
    * many compiler warning fixes
    * Basic support for Closed Captioning Roll-up mode
    * reworked screensaver disabling support, most users will need to use
      -heartbeat-cmd due to screensaver authors being unable to design a
      common API

    Ports:
    * small crash with vo_macosx fixed
    * AC3/DTS passthrough for ao_macosx
    * Fix frozen OSD on Mac OS X
    * vo_gl now works with -wid and nvidia drivers on Windows (this is a hack)

  rc2try2:

    Security:
    * buffer overflow in url.c fixed
    * buffer overflow in stream_cddb.c fixed
    * stack overflow in demuxer_audio.c fixed
    * buffer overflow in demuxer_mov.c fixed


  rc2: "AreWeThereYet?" October 7, 2007
  (SVN revisions: MPlayer r24722, FFmpeg r10677)

    DOCS:
    * console messages and XML documentation converted to UTF-8
    * Russian documentation translation finished
    * Russian man page translation finished
    * Chinese man page translation finished
    * Chinese documentation translation started
    * Documented get/set/step properties in DOCS/tech/slave.txt

    Decoders:
    * Intel Music Coder audio decoding via lavc
    * Monkey Audio audio decoding via lavc
    * Fraps v2/v4 video decoding via lavc
    * Video game codecs: 4XM audio, Electronic Arts ADPCM audio, Delphine CIN
      audio and video, Interplay DPCM audio, Sierra VMD video, Tiertex SEQ
      video, Westwood IMA ADPCM audio, XAN wc3 video, Id CIN video, Interplay
      video, XAN ADPCM audio, Westwood SND1 audio, Feeble Files DXA video, THP
      audio and video, Renderware TeXture Dictionary video, Bethesda Software
      VID video via lavc
    * video game codecs: XAN wc4 video via binary DLL
    * libmpeg2 updated to 0.4.1
    * fixed resolution switching with libmpeg2
    * handle resolution switching for Real codecs